; ModuleID = '/home/carl/AnghaBench/linux/drivers/edac/extr_edac_device.c_edac_device_workq_teardown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/edac/extr_edac_device.c_edac_device_workq_teardown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edac_device_ctl_info = type { i32, i32, i32 }

@OP_OFFLINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.edac_device_ctl_info*)* @edac_device_workq_teardown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @edac_device_workq_teardown(%struct.edac_device_ctl_info* %0) #0 {
  %2 = alloca %struct.edac_device_ctl_info*, align 8
  store %struct.edac_device_ctl_info* %0, %struct.edac_device_ctl_info** %2, align 8
  %3 = load %struct.edac_device_ctl_info*, %struct.edac_device_ctl_info** %2, align 8
  %4 = getelementptr inbounds %struct.edac_device_ctl_info, %struct.edac_device_ctl_info* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @OP_OFFLINE, align 4
  %10 = load %struct.edac_device_ctl_info*, %struct.edac_device_ctl_info** %2, align 8
  %11 = getelementptr inbounds %struct.edac_device_ctl_info, %struct.edac_device_ctl_info* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.edac_device_ctl_info*, %struct.edac_device_ctl_info** %2, align 8
  %13 = getelementptr inbounds %struct.edac_device_ctl_info, %struct.edac_device_ctl_info* %12, i32 0, i32 0
  %14 = call i32 @edac_stop_work(i32* %13)
  br label %15

15:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @edac_stop_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
